# GrooveForge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  generation.py  main.py  models.py  retrieval.py  synthesis.py
backend/app/routes/: generate.py  lyrics.py  search.py  sound.py
backend/scripts/: embed_blueprints.py  ingest_blueprints.py  load_msd_full.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AggregatedProfile.tsx  AnimatedBackground.tsx  AudioPlayer.tsx  BlueprintCard.tsx  BlueprintDeck.tsx  BlueprintTrail.tsx  EmptyState.tsx  GeneratingOverlay.tsx  GenerationResult.tsx  HistoryPanel.tsx  InputPanels.tsx  LyricsAnalysisCard.tsx  ModeSwitcher.tsx  RemixControls.tsx  ReviewModal.tsx  SoundAnalysisCard.tsx  VibeGraph.tsx  VibePanel.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/data/: graphNodes.ts  mockBlueprints.ts
frontend/src/hooks/: useHistory.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx  Landing.tsx
images/: README.md
