[project]
name = "GrooveForge"
version = "0.1.0"
description = "GrooveForge"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.93.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.10",
    "turbopuffer>=1.21.0",
    "uvicorn[standard]>=0.44.0",
]
