[project]
name = "GrooveForge"
version = "0.1.0"
description = "GrooveForge"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.93.0",
    "datasets>=4.8.4",
    "elevenlabs>=2.42.0",
    "fastapi>=0.135.3",
    "google-genai>=1.0.0",
    "h5py>=3.16.0",
    "httpx>=0.28.1",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.10",
    "sentence-transformers>=5.4.0",
    "sqlalchemy>=2.0.49",
    "turbopuffer>=1.21.0",
    "uvicorn[standard]>=0.44.0",
]
